Add titles to index pages and start articles index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@
 
 @import "pages/admin/layout";
 
+@import "pages/articles/index";
 @import "pages/articles/show";
 
 @import "pages/events/show";
