--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -21,7 +21,7 @@
       <div class="wrapper">
         <div class="masthead">
           <div class="logo">
-            <a href="/" class="glitch"><%= render "layouts/logo" %></a>
+            <a href="/" class="glitch"><%= render "partials/logo" %></a>
           </div>
           <nav>
             <%= link_to "Logout", :logout, method: :delete %>
