--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
       <div class="wrapper">
         <div class="masthead">
           <div class="logo">
-            <a href="/" class="glitch"><%= render "layouts/logo" %></a>
+            <a href="/" class="glitch"><%= render "partials/logo" %></a>
           </div>
           <nav>
             <a href="/about">About</a>
@@ -35,8 +35,8 @@
         </div>
 
         <div class="intro">
-          <h2 class="tagline">The Biggest Collection of Open Source ML Models</h2>
-          <h1 class="title">The ML Research Lab</h1>
+          <h2 class="tagline">What the Fuck is up with Artificial Intelligence</h2>
+          <h1 class="title">The Open Source ML Community</h1>
           <div class="search">
             <div class="input-group">
               <span class="input-icon"><i class="fa fa-search"></i></span>
