--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,8 +18,8 @@
     <div class="wrapper">
       <div class="primary">
         <div class="intro">
-          <h1>Can we solve meaningful problems with machine learning?</h1>
-          <p>Yes! Thanks to increased computational power and the availability of vast amounts of data, we can use machine learning to conquer tasks that were previously thought to be impossible. We're hoping to use the power of machine learning to do real good in this world.</p>
+          <h1>What is the future of machine learning?</h1>
+          <p>Thanks to increased computational power and vast amounts of data, we can use machine learning to conquer tasks that were previously thought to be impossible. We're hoping to use the power of machine learning to do real good in this world.</p>
 
           <p>We're a study group. We're a research lab. We're a company driven to make waves in the grand challenges that face humanity.</p>
           
