--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,5 @@
+<%- title "Articles" %>
+
 <div class="articles-index">
   <div class="categories">
     <div class="wrapper">
@@ -14,16 +16,30 @@
 
   <div class="showcase">
     <div class="wrapper">
-      <% if @articles.empty? %>
-        <p class="message">Nothing to see here.</p>
-      <% else %>
-        <% @articles.each do |article| %>
-          <a class="item" href="<%= article_path(article.slug) %>">
-            <h2 class="title"><%= article.title %></h2>
-          </a>
-        <% end %>
-        <%= paginate @articles %>
-      <% end %>
+      <div class="primary">
+        <div class="feature">
+          <img src="https://source.unsplash.com/600x300">
+          <div class="content">
+            <h2 class="title"><%= Faker::Lorem.sentence %></h2>
+            <p class="description"><%= Faker::Lorem.paragraph %></p>
+          </div>
+        </div>
+
+        <div class="grid">
+          <% if @articles.empty? %>
+            <p class="message">Nothing to see here.</p>
+          <% else %>
+            <% @articles.each do |article| %>
+              <a class="item" href="<%= article_path(article.slug) %>">
+                <h2 class="title"><%= article.title %></h2>
+              </a>
+            <% end %>
+            <%= paginate @articles %>
+          <% end %>
+        </div>
+      </div>
+
+      <div class="secondary"></div>
     </div>
   </div>
 </div>
