--- a/universe/frontend/src/assets/styles/application.scss
+++ b/universe/frontend/src/assets/styles/application.scss
@@ -4,6 +4,7 @@
 @import "base/main";
 
 @import "components/wrapper";
+@import "components/categories";
 @import "components/header";
 @import "components/logo";
 @import "components/footer";
