--- a/universe/frontend/src/assets/styles/components/_categories.scss
+++ b/universe/frontend/src/assets/styles/components/_categories.scss
@@ -1,16 +1,19 @@
-.categories {
-  .list {
-    display:flex;
-    width:100%;
-    padding-bottom:10px;
-    border-bottom:1px solid $light2;
+.categories-container {
+  .wrapper {
+    padding-bottom:0;
+    .list {
+      display:flex;
+      width:100%;
+      padding-bottom:10px;
+      border-bottom:1px solid $light2;
 
-    a {
-      margin-right:20px;
-      font-weight:bold;
+      a {
+        margin-right:20px;
+        font-weight:bold;
 
-      &.active {
-        color:$purple2;
+        &.active {
+          color:$purple2;
+        }
       }
     }
   }
