--- a/universe/frontend/src/assets/styles/components/_header.scss
+++ b/universe/frontend/src/assets/styles/components/_header.scss
@@ -62,6 +62,7 @@ header {
       position:absolute;
       width:100%;
       left:10px; bottom:20px;
+      padding-right:10px;
 
       .tagline {
         color:white;
