--- a/universe/frontend/src/assets/styles/application.scss
+++ b/universe/frontend/src/assets/styles/application.scss
@@ -3,8 +3,12 @@
 @import "base/typography";
 @import "base/main";
 
-@import "components/wrapper";
-@import "components/categories";
-@import "components/header";
-@import "components/logo";
-@import "components/footer";
+
+@import "../../views/Layouts/default";
+@import "../../views/Layouts/Footer/footer";
+@import "../../views/Layouts/Header/header";
+@import "../../views/Layouts/Header/logo";
+
+@import "../../views/Components/Categories/categories";
+
+@import "../../views/Home/home";
