Add image to showcase

--- a/universe/frontend/src/App/app.scss
+++ b/universe/frontend/src/App/app.scss
@@ -13,4 +13,5 @@
 @import "../Components/Categories/categories";
 
 @import "../Home/home";
+@import "../Home/Showcase/showcase";
 @import "../Home/Feed/feed";
