--- a/frontend/src/Static/Assets/styles/_typography.scss
+++ b/frontend/src/Static/Assets/styles/_typography.scss
@@ -16,10 +16,10 @@ body {
 a {
   text-decoration:none;
   font-weight:bold;
-  color:$purple1;
+  color:#007bff;
 
-  &:hover {
-    color:$purple2;
+  &.active, &:hover {
+    color:#0056b3;
   }
 }
 
