--- a/frontend/src/Static/Assets/styles/_typography.scss
+++ b/frontend/src/Static/Assets/styles/_typography.scss
@@ -10,7 +10,8 @@ html {
 }
 
 body {
-  @include font-size(14);
+  @include font-size(16);
+  line-height: 2.2rem;
 }
 
 a {
@@ -28,6 +29,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight:bold;
   margin:0;
   font-family:sans-serif;
+  margin-bottom:1rem;
 }
 
 h1 {
@@ -49,14 +51,32 @@ h4, h5, h6 {
 
 }
 
-p {
-  @include font-size(14);
-  margin-bottom:20px;
+p, i {
+  @include font-size(16);
+  line-height: 2.2rem;
+  margin:0;
+  margin-bottom:1.5rem;
 }
+
+i {
+  font-style:italic;
+  display:block;
+}
+
 ul, ol {
-  margin-bottom:20px;  
+  margin:0;  
+  margin-bottom:1.5rem;
+}
+
+blockquote {
+  border-left: 5px solid #ccc;
+  padding-left: 1.5rem;
+  padding-top: 0.7rem;
+  padding-bottom: 0.7rem;
+  margin-bottom: 1.5rem;
 }
 
 pre, code {
   font-family:monospace;
+  margin-bottom:1.5rem;
 }
