--- a/frontend/src/Static/Assets/styles/_typography.scss
+++ b/frontend/src/Static/Assets/styles/_typography.scss
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight:bold;
   margin:0;
   font-family:sans-serif;
-  margin-bottom:1rem;
+  margin-bottom:0.5rem;
 }
 
 h1 {
@@ -74,6 +74,8 @@ blockquote {
   padding-top: 0.7rem;
   padding-bottom: 0.7rem;
   margin-bottom: 1.5rem;
+  @include font-size(16);
+  line-height: 2.2rem;
 }
 
 pre, code {
