--- a/frontend/src/Static/Assets/GlobalStyles.css
+++ b/frontend/src/Static/Assets/GlobalStyles.css
@@ -28,6 +28,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
   line-height: 1;
+  background: #111;
 }
 ol, ul {
   list-style: inside;
