Remove codegen and start to define my own types

--- a/static/layout.css
+++ b/static/layout.css
@@ -82,6 +82,10 @@ th:last-child {
   padding-right: 0;
 }
 
+.footnote-backref {
+  display: none;
+}
+
 .glitch {
   position: relative;
   width: 260px;
