Change logo transition effect

--- a/static/layout.css
+++ b/static/layout.css
@@ -7,8 +7,17 @@ body {
 }
 
 body.glitched {
-  filter: grayscale(1);
-  transition: filter 2s ease;
+  filter: brightness(1.5);
+  transition: filter 1s ease;
+}
+
+.hero::before {
+  transition: filter 0.5s ease !important;
+}
+
+.hero.glitched::before {
+  filter: brightness(1.6);
+  transition: opacity 0.5s ease, filter 1s ease !important;
 }
 
 a {
