Remove header hover interaction

--- a/static/layout.css
+++ b/static/layout.css
@@ -1,17 +1,8 @@
 html {
-  background: white;
+  background: black;
 }
 body {
   background: white;
-}
-
-.hero::before {
-  transition: filter 0.5s ease !important;
-}
-
-.hero.glitched::before {
-  filter: brightness(1.6);
-  transition: opacity 0.5s ease, filter 1s ease !important;
 }
 
 a {
