--- a/static/syntax.css
+++ b/static/syntax.css
@@ -1,9 +1,9 @@
 code[class*="language-"],
 pre[class*="language-"] {
-  font-family: Consolas, Menlo, Monaco, "Andale Mono WT", "Andale Mono",
-    "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono",
-    "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L",
-    "Courier New", Courier, monospace;
+  font-family: "Fira Mono", Consolas, Menlo, Monaco, "Andale Mono WT",
+    "Andale Mono", "Lucida Console", "Lucida Sans Typewriter",
+    "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono",
+    "Nimbus Mono L", "Courier New", Courier, monospace;
   line-height: 1.5;
   direction: ltr;
   text-align: left;
@@ -18,12 +18,14 @@ pre[class*="language-"] {
   hyphens: none;
   background: #222831;
   color: #a1a1a1;
+  font-size: 0.8rem;
 }
 
 /* Code blocks */
 pre[class*="language-"] {
   padding: 1em;
-  margin: 0.5em 0 1em 0;
+  margin-top: 0;
+  margin-bottom: 2rem;
   overflow: auto;
 }
 
